--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,4 +1,4 @@
-<h1>your own personal spammer</h1>
+<h1>YOUR OWN PERSONAL SPAMMER!</h1>
 
 <%= form_for @friend do |f| %>
   <%= f.label :number, "Victim's number" %>
